Updates from test jobs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <!-- saved from url=(0030)http://192.168.15.106/dnasite/ -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Conserv</title>
-    <meta content="Karen Sargsyan, Karine Mazmanian, Jon Wright, Carmay Lim" name="author">
+    <title>VirHost</title>
+    <meta content="Karen Sargsyan, Karine Mazmanian, Jon D. Wright, Carmay Lim" name="author">
     <meta content="Webpage interface to the VirHost Analysis Server"
       name="description">
     <meta content="VirHost - The Potential Hosts for Human Viruses Server" name="keywords">
@@ -15,7 +15,7 @@
     </div>
     <h1 style="text-align: center;">VirHost, The Potential Hosts for Human Viruses Server</h1>
     <h2 style="text-align: center;">Karen Sargsyan<sup>1</sup>, Karine Mazmanian,<sup>1</sup>
-    Jon Wright<sup>1</sup> and Carmay Lim<sup>1,2</sup></h2>
+    Jon D. Wright<sup>1</sup> and Carmay Lim<sup>1,2</sup></h2>
     <h3 style="text-align: center;"> <sup>1</sup>Institute of
       Biomedical Sciences, Academia Sinica, Taipei, Taiwan<br>
         <sup>2</sup>Department of Chemistry, National TsingHua University,
