--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     <p>An example of the results for the ACE2 entry chain A can be found on this <a href="examples/ace2">page</a>.
     <hr style="border-style: solid; color: black;">
 
-<form action="scripts/upload.php" method="post" enctype="multipart/form-data">
-  <b>Submission area choose option A <em> or </em> Option B:</b><br>
-<form action="scripts/pdbid.php" method="post" enctype="multipart/form-data">
+<b>Submission area choose option A <em> or </em> Option B:</b><br>
+<form action="scripts/ncbiid.php" method="post" enctype="multipart/form-data">
   <p> <b>Option A) For a sequence with a known NCBI name.</b><br>
-  Provide a NCBI ID: <input type="text" name="PDBID"> 
+  Provide a NCBI ID: <input type="text" name="NCBIID"> 
   <input type="submit" value="Submit NCBI ID" name="submit">
 </form>
 <form action="scripts/fasta.php" method="post" enctype="multipart/form-data">
