Moved datasets and dataformat elsewhere

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <sup>2</sup>Department of Chemistry, National TsingHua University,
           HsinChu, Taiwan </h3>
     <p>This server can be used to search for other species that may host human viruses.</p>
-      For your target protein provide either a name or a fasta format sequence that you would like the results for.</p>
-    <p>An example of the results for the ACE2 entry chain A can be found on this <a href="examples/ace2">page</a>.
+      For your target protein provide either a NCBI ortholog symbol name such as ACE2  or a fasta format sequence that you would like the results for.</p>
+    <p>An example of the results for the ACE2 entry can be found on this <a href="examples/ace2">page</a>.
     <hr style="border-style: solid; color: black;">
 
 <b>Submission area choose option A <em> or </em> Option B:</b><br>
 <form action="scripts/ncbiid.php" method="post" enctype="multipart/form-data">
-  <p> <b>Option A) For a sequence with a known NCBI name.</b><br>
+  <p> <b>Option A) For a known NCBI ortholog symbol name.</b><br>
   Provide a NCBI ID: <input type="text" name="NCBIID"> 
   <input type="submit" value="Submit NCBI ID" name="submit">
 </form>
 <form action="scripts/fasta.php" method="post" enctype="multipart/form-data">
   <p> <b>Option B) For a fasta format.</b><br>
-  Please paste it into the box here, single letter codes only:<br>
+  Please paste your sequence into the box here, single letter codes only, without the title line:<br>
   <textarea cols="80" rows="10" name="FASTA" id="FASTA"></textarea>
   <input type="submit" value="Submit the Fasta Sequence" name="submit">
   </textarea>
