Changed a comma in the author line

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <center> <img src="images/as-en_07.gif" alt="Academia Sinica Logo"></center>
     </div>
     <h1 style="text-align: center;">VirHost, The Potential Hosts for Human Viruses Server</h1>
-    <h2 style="text-align: center;">Karen Sargsyan<sup>1</sup>, Karine Mazmanian,<sup>1</sup>
+    <h2 style="text-align: center;">Karen Sargsyan<sup>1</sup>, Karine Mazmanian<sup>1</sup>,
     Jon D. Wright<sup>1</sup> and Carmay Lim<sup>1,2</sup></h2>
     <h3 style="text-align: center;"> <sup>1</sup>Institute of
       Biomedical Sciences, Academia Sinica, Taipei, Taiwan<br>
