Added code to allow for fasta headers to be included

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </form>
 <form action="scripts/fasta.php" method="post" enctype="multipart/form-data">
   <p> <b>Option B) For a fasta format.</b><br>
-  Please paste your sequence into the box here, single letter codes only, without the title line:<br>
+  Please paste your fasta sequence into the box here, single letter codes only:<br>
   <textarea cols="80" rows="10" name="FASTA" id="FASTA"></textarea>
   <input type="submit" value="Submit the Fasta Sequence" name="submit">
 </form>
