Added fasta example input file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <sup>2</sup>Department of Chemistry, National TsingHua University,
           HsinChu, Taiwan </h3>
     <p>This server can be used to search for other species that may host human viruses.</p>
-      For your target protein provide either a NCBI gene symbol name such as ACE2  or a fasta format sequence that you would like the results for.</p>
+      For your target protein provide either a NCBI gene symbol name such as ACE2 or a <a href="examples/ace2/input.fasta">fasta format sequence</a>  that you would like the results for.</p>
     <p>An example of the results for the ACE2 entry can be found on this <a href="examples/ace2">page</a>.
     <hr style="border-style: solid; color: black;">
 
