Added DOIs for the programs and a link to github

--- a/index.html
+++ b/index.html
@@ -39,10 +39,19 @@
 </form>
 
 <hr style="border-style: solid; color: black;">
-<p>The VirHost server was created by Karen Sargsyan, Karine Mazmanian, Jon D Wright and Carmay Lim and is hosted in the Institute of BioMedical Sciences, Academia Sinica, Taipei, Taiwan.</p>
-<p>Code that this server uses can be obtained from github as wrigjz/virshost_python.
+References for programs it uses are:
+<p>
+Camacho, Christiam, George Coulouris, Vahram Avagyan, Ning Ma, Jason Papadopoulos, Kevin Bealer, and Thomas L. Madden. 2009. 'BLAST+: architecture and applications.', BMC Bioformatics, 10: 421. <a href="https://doi.org/10.1186/1471-2105-10-421">DOI: https://doi.org/10.1186/1471-2105-10-421</a></p>
+<p>
+NCBI, Resource Coordinators. 2017. 'Database Resources of the National Center for Biotechnology Information.', Nuc. Acids Res., 45: D12–D17. <a href="https://doi.org/10.1093/nar/gky1069">DOI: https://doi.org/10.1093/nar/gky1069</a></p>
+<p>
+Sievers, Fabian, and Desmond G. Higgins. 2014. 'Clustal Omega, accurate alignment of very large numbers of sequences.', Methods Mol Biol, 1079: 105-16. <a href="https://doi.org/10.1007/978-1-62703-646-7_6">DOI: https://doi.org/10.1007/978-1-62703-646-7_6</a></o>
+<p>
+UniProt, Consortium. 2021. 'UniProt: the universal protein knowledgebase in 2021.', Nuc. Acids Res., 49: D480-D89. <a href="https://doi.org/10.1093/nar/gkaa1100">DOI: https://doi.org/10.1093/nar/gkaa1100</a></p>
+
+<p>Code that this server uses can be obtained from github as <a href="https://github.com/wrigjz/virhost_php">wrigjz/virhost_php.</a>
 <hr style="border-style: solid; color: black;">
-   <a href="https://virhost.limlab.dnsalias.org">VirHost</a> is hosted at <a href="http://www.ibms.sinica.edu.tw">The Institute of Biomedical Sciences</a>, <a href="http://www.sinica.edu.tw">Academia Sinica</a>, Taipei 11529, Taiwan.
+   The <a href="https://virhost.limlab.dnsalias.org">VirHost</a> server was created by Karen Sargsyan, Karine Mazmanian, Jon D Wright and Carmay Lim and is hosted at <a href="http://www.ibms.sinica.edu.tw">The Institute of Biomedical Sciences</a>, <a href="http://www.sinica.edu.tw">Academia Sinica</a>, Taipei 11529, Taiwan.
                <hr style="border-style: solid; color: black;">
 </body>
 </html>
