--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </form>
 
 <hr style="border-style: solid; color: black;">
-References for programs it uses are:
+References for programs VirHost uses are:
 <p>
 Camacho, Christiam, George Coulouris, Vahram Avagyan, Ning Ma, Jason Papadopoulos, Kevin Bealer, and Thomas L. Madden. 2009. 'BLAST+: architecture and applications.', BMC Bioformatics, 10: 421. <a href="https://doi.org/10.1186/1471-2105-10-421">DOI: https://doi.org/10.1186/1471-2105-10-421</a></p>
 <p>
