--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
 <form action="scripts/ncbiid.php" method="post" enctype="multipart/form-data">
   <p> <b>Option A) For a known NCBI gene symbol name.</b><br>
   Provide a NCBI gene symbol: <input type="text" name="NCBIID"> 
-  <input type="submit" value="Submit NCBI Gene Symbol" name="submit">
+  <input type="submit" value="Click to submit NCBI Gene Symbol" name="submit">
 </form>
 <form action="scripts/fasta.php" method="post" enctype="multipart/form-data">
-  <p> <b>Option B) For a fasta format.</b><br>
+  <p> <b>Option B) For a fasta format, with or without known important residues.</b><br>
   Please paste your fasta sequence into the box here, single letter codes only:<br>
-  <textarea cols="80" rows="10" name="FASTA" id="FASTA"></textarea>
-  <input type="submit" value="Submit the Fasta Sequence" name="submit">
+  <textarea cols="80" rows="10" name="FASTA" id="FASTA"></textarea><br>
+  If you have specific important residues then enter them here, separated by commas, e.g. <em>S19,Q24,T27,F28,D30,K31</em> if none then just leave this box blank.<br>
+  <textarea cols="80" rows="1" name="IMPRES" id="IMPRES"></textarea><br>
+  <input type="submit" value="Click to submit the Fasta Sequence" name="submit">
 </form>
 
 <hr style="border-style: solid; color: black;">
