--- a/results_top.html
+++ b/results_top.html
@@ -25,6 +25,6 @@
    <div style="text-align: center;">
       <center> <img src="../images/as-en_07.gif" alt="Academia Sinica Logo"></center>
     </div>
-    <h1 style="text-align: center;">VirHost<sup>DB</sup> - The Potential Hosts for Human Viruses Server
+    <h1 style="text-align: center;">VirHost - The Potential Hosts for Human Viruses Server
     </h1>
     <p>This server contains a curated database of virus information.</p>
