--- a/results_bot.html
+++ b/results_bot.html
@@ -1,5 +1,5 @@
 <hr style="border-style: solid; color: black;">
-   The <a href="https://virhost.limlab.dnsalias.org">VirHost<sup>DB</sup></a> database and server was created by Karen Sargsyan, Karine Mazmanian, Jon D. Wright and Carmay Lim and is hosted at <a href="http://www.ibms.sinica.edu.tw">The Institute of Biomedical Sciences</a>, <a href="http://www.sinica.edu.tw">Academia Sinica</a>, Taipei 11529, Taiwan.
+   The <a href="https://virhost.limlab.dnsalias.org">VirHost<sup>DB</sup></a> database and server is hosted at <a href="http://www.ibms.sinica.edu.tw">The Institute of Biomedical Sciences</a>, <a href="http://www.sinica.edu.tw">Academia Sinica</a>, Taipei 11529, Taiwan.
                <hr style="border-style: solid; color: black;">
 </body>
 </html>
