--- a/results_top.html
+++ b/results_top.html
@@ -7,7 +7,7 @@
     <meta content="Karen Sargsyan, Karine Mazmanian, Jon D. Wright and Carmay Lim" name="author">
     <meta content="Webpage interface to the VirHost Server"
       name="description">
-    <meta content="VirHost, The Potential Hosts for Human Viruses Server" name="keywords">
+    <meta content="VirHost - The Potential Hosts for Human Viruses Server" name="keywords">
     <style>
     table, th, td {
             border: 1px solid black;
@@ -25,6 +25,6 @@
    <div style="text-align: center;">
       <center> <img src="../images/as-en_07.gif" alt="Academia Sinica Logo"></center>
     </div>
-    <h1 style="text-align: center;">VirHost - The Potential Hosts for Human Viruses Server
+    <h1 style="text-align: center;">Results from <a href="https://virhost.limlab.dnsalias.org">VirHost</a> - The Potential Hosts for Human Viruses Server
     </h1>
     <p>This server contains a curated database of virus information.</p>
