Added an exmaple for the DB search

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <b>Submission area choose one of option A, B or Option C:</b><br>
 <form action="scripts/searchdb.php" method="post" enctype="multipart/form-data">
 <p> <b>Option A) To see what information we have on your virus.</b><br>
-If you would just like our stored information on a number of viruses then enter the virus name below to search for it.<br>
+If you would just like our stored information on a number of viruses then enter the virus name below to search for it, short simple terms such as <a href="examples/herpes.html">herpes</a> work best.<br>
 Provide virus name: <input type="text" name="VIRUSNAME">
 <input type="submit" value="Click to submit virus name" name="submit">
 </form>
